Correct Moho logo alignment in text

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,5 @@ body,
 .mohoLogo {
   height: 4rem;
   width: auto;
-  margin-right: 0.3rem;
-  margin-left: 0.3rem;
+  margin: 0px 0.4rem 0 0.75rem;
 }
